--- a/automastAPI/appsettings.json
+++ b/automastAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DataConnection": "Data source = DESKTOP-LNS7C0B\\SQLEXPRESS;Initial Catalog=automast;User Id=sadm1;password=kjkszpj_123"
+    "DataConnection": "Data source = DESKTOP-LNS7C0B\\SQLEXPRESS;Initial Catalog=automast;User Id=sadm1;password=qwe"
   },
 
   "Logging": {
